# Few-Shot-NeRFs

./: .gitignore  .gitmodules  README.md  ruff.toml
nerfstudio-gnt/: GNTConfig.py  GNTDataManager.py  GNTModel.py  GNTPipeline.py  GNTTrainer.py  GNTTransferConfig.py  README.md  pyproject.toml  test.py
nerfstudio-pixel-nerf/: MANIFEST.in  PixelNeRFConfig.py  PixelNeRFDataManager.py  PixelNeRFModel.py  PixelNerfPipeline.py  README.md  pyproject.toml  test.py
