[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerfstudio-pixel-nerf"
version = "0.0.1"
description = "Unnoficial Implementation for `pixelNeRF: Neural Radiance Fields from One or Few Images` [Alex et al.] for NeRFStudio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lpips>=0.1.4",
  "nerfstudio",
]

[project.entry-points."nerfstudio.method_configs"]
pixel-nerf = "PixelNeRFConfig:PixelNeRF"

[tool.setuptools]
py-modules = ["PixelNeRFConfig", "PixelNeRFModel"]

[tool.setuptools.packages]
find = { }


[tool.setuptools.package-dir]
"pixel_nerf" = "pixel-nerf"
