[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerfstudio-pixelnerf"
version = "0.0.1"
description = "Unofficial Implementation of `pixelNeRF: Neural Radiance Fields from One or Few Images` [Yu et al.] for NeRFStudio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dotmap>=1.3.30",
  "lpips>=0.1.4",
  "nerfstudio",
  "pyhocon>=0.3.63",
]

[project.entry-points."nerfstudio.method_configs"]
pixelnerf = "PixelNeRFConfig:PixelNeRF"

[tool.setuptools]
py-modules = ["PixelNeRFConfig", "PixelNeRFModel", "PixelNeRFPipeline", "PixelNeRFDataManager"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["pixelnerf*"]
