[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerfstudio-pixelnerf"
version = "0.0.15"
description = "Unofficial Implementation of `pixelNeRF: Neural Radiance Fields from One or Few Images` [Yu et al.] for NeRFStudio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dotmap>=1.3.30",
  "gdown>=6.0.0",
  "lpips>=0.1.4",
  "nerfstudio",
  "pyhocon>=0.3.63",
]

[project.entry-points."nerfstudio.method_configs"]
pixelnerf = "PixelNeRFConfig:PixelNeRF"

[tool.setuptools]
py-modules = ["PixelNeRFConfig", "PixelNeRFModel", "PixelNerfPipeline", "PixelNeRFDataManager"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pixelnerf*"]


[tool.setuptools.package-dir]
"pixelnerf" = "pixelnerf"
"src" = "pixelnerf/src"
"util" = "pixelnerf/src/util"
